# clearmetrics

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
clearmetrics/adapters/inbound/: fastapi_api.py
clearmetrics/adapters/outbound/: csv_transaction_source_adapter.py  external_api_transaction_source_adapter.py  jwt_token_generator_adapter.py  jwt_token_verifier_adapter.py  postgresql_metric_source_adapter.py  postgresql_metric_storage_adapter.py  postgresql_models.py  postgresql_transaction_source_adapter.py  postgresql_transaction_storage_adapter.py
clearmetrics/application/: export_metrics.py  ingest_data.py  validate_data.py
clearmetrics/cli/: main.py
clearmetrics/domain/exceptions/: __init__.py  domain_exceptions.py
dashboard/: index.html
dashboard/js/: charts.js
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: conf.py  index.rst
scripts/: health_check.sh  init_db.sh
tests/: conftest.py
tests/integration/: test_export_metrics.py  test_ingest_data.py  test_validate_data.py
tests/non_regression/: test_etl_stability.py
tests/unit/: test_auth_service.py  test_csv_adapter.py  test_date_range_rule.py  test_etl_service.py  test_external_api_adapter.py  test_fastapi_api.py  test_jwt_auth_adapter.py  test_metric.py  test_no_duplicate_rule.py  test_not_null_rule.py  test_positive_amount_rule.py  test_postgresql_adapter.py  test_postgresql_metric_storage_adapter.py  test_quality_result.py  test_quality_service.py  test_report.py  test_transaction.py  test_user.py  test_valid_currency_rule.py
(+22 files in other folders)
